Update ReportManager.java